fix dashboard alignment

--- a/client/src/CSS/Dashboard.css
+++ b/client/src/CSS/Dashboard.css
@@ -21,9 +21,9 @@
   column-count: 2;
   column-gap: 200px;
   display: block;
-  margin-top: 100px;
-  margin-left: 100px !important;
+  margin: 0px auto;
   width: fit-content;
+  margin-top: 100px;
 }
 
 .TopRow {
@@ -48,6 +48,10 @@
   margin-bottom: 4em;
   width: 250px;
   display: block;
+}
+
+.missionIcon {
+  margin: 20px 0px;
 }
 .HARD_CODE_SHADE {
   background: #4a3f80;
